# Megido

./: .dockerignore  .env.example  .gitattributes  .gitignore  .vuln_scan_state.pkl  =3.14.0  =4.0.0  =6.6.0  ACCURACY_ENHANCEMENTS.md  ADVANCED_DYNAMIC_ANALYSIS_COMPLETE.md  ADVANCED_ENHANCEMENTS_SUMMARY.md  ADVANCED_EXPLOITATION_GUIDE.md  ADVANCED_SCANNER_GUIDE.md  ADVANCED_SQLI_IMPLEMENTATION.md  ADVANCED_VULNERABILITY_SCANNER.md  APP_MANAGER_README.md  ASYNC_SCAN_ARCHITECTURE.md  BLIND_SQLI_IMPLEMENTATION_COMPLETE.md  BROWSER_INTERCEPTOR_INTEGRATION.md  BROWSER_README.md  BYPASSER_README.md  CHANGELOG.md  CLAMAV_INTEGRATION_SUMMARY.md  CLICKJACKING_IMPLEMENTATION_SUMMARY.md  CLICKJACKING_PLUGIN_GUIDE.md  CODE_OF_CONDUCT.md  COMPLETE_EVOLUTION_SUMMARY.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPLETE_TEXTBOOK_ACHIEVEMENT.md  COMPREHENSIVE_SQLI_IMPLEMENTATION_SUMMARY.md  CONFIGURATION.md  CONTRIBUTING.md  CROSS_PLATFORM.md  CUSTOM_TECHNIQUES_GUIDE.md  DATA_TRACER_README.md  DECOMPILER_IMPLEMENTATION_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DESIGN_DECISIONS.md  DJANGO_UPGRADE_SUMMARY.md  DOCKER_TESTING.md  (+246 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
app_manager/: admin.py  apps.py  cancel_views.py  middleware.py  models.py  tests.py  urls.py  views.py
browser/: CEF_IMPLEMENTATION_SUMMARY.md  CEF_INTEGRATION.md  admin.py  apps.py  cef_example.py  desktop_launcher.py  models.py  tests.py  urls.py  views.py
bypasser/: admin.py  apps.py  encoding.py  models.py  payload_library.py  technique_parser.py  tests.py  urls.py  views.py
collaborator/: admin.py  apps.py  tests.py  (+3 more)
(+1003 files in other folders)
